should clear the input field after submitting; also, corrects color of font in search bar for legibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ main {
   border-radius: 5px;
   padding: 10px;
   width: 100%;
+  color:#fff;
   background-color: #333;
 }
 
